Added link to GitHub source

--- a/Index.html
+++ b/Index.html
@@ -127,6 +127,12 @@
         </table>
       </div>
     </div>
+    <small
+      ><a href="https://github.com/trissylee/WeatherApp" target="_blank"
+        >Open-source code</a
+      >
+      by T.A.</small
+    >
     <script src="src/script.js"></script>
   </body>
 </html>
